--- a/HWGraph/package.json
+++ b/HWGraph/package.json
@@ -27,15 +27,22 @@
     "@electron-forge/plugin-fuses": "^7.10.2",
     "@electron-forge/plugin-vite": "^7.10.2",
     "@electron/fuses": "^1.8.0",
+    "@types/papaparse": "^5.5.2",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.23",
     "electron": "39.2.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
+    "typescript": "^5.9.3",
     "vite": "^5.4.21"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.2",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
     "electron-squirrel-startup": "^1.0.1",
+    "papaparse": "^5.5.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   }
